# oranjformat

./: Cargo.toml  README.md
src/: dataformat.rs  lib.rs  lookups.rs  makemove.rs
src/dataformat/: marlinformat.rs
src/shatranj/: magic.rs  mod.rs  piece.rs  piecelayout.rs  shatranjmove.rs  squareset.rs  types.rs
src/shatranj/board/: mod.rs  movegen.rs  validation.rs
