[package]
name = "oranjformat"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A library for the data-representation used by the oranj shatranj engine."

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bulletformat = "1.7.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
